--- a/playground/index.css
+++ b/playground/index.css
@@ -22,3 +22,19 @@ h1 {
 .ListItemEven {
   background-color: #e6e4dc;
 }
+
+.Guide {
+  text-align: center;
+}
+
+a {
+  color: steelblue;
+  font-size: 18px;
+  text-decoration: none;
+  margin-bottom: 12px;
+  display: block;
+}
+
+a:hover {
+  text-decoration: underline;
+}
