--- a/playground/index.css
+++ b/playground/index.css
@@ -2,6 +2,13 @@ h1 {
   text-align: center;
 }
 
+.App {
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+}
+
 .List {
   border: 1px solid #e6e4dc;
   max-width: 100%;
