--- a/playground/index.css
+++ b/playground/index.css
@@ -13,8 +13,8 @@ h1 {
   border: 1px solid #e6e4dc;
   max-width: 100%;
   height: 400px;
-  width: 250px;
-  overflow-y: auto;
+  width: 350px;
+  /* overflow-x: auto; */
   margin: 0 auto;
 }
 
