--- a/playground/index.css
+++ b/playground/index.css
@@ -14,8 +14,8 @@ h1 {
   max-width: 100%;
   height: 400px;
   width: 350px;
-  /* overflow-x: auto; */
   margin: 0 auto;
+  margin-top: 30px;
 }
 
 .ListItemEven,
